# PRism

./: .gitignore  .gitleaks.toml  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: NOTICE.md  settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  prepare-release.yml  release.yml  tag-on-release-merge.yml  update-manifest.yml  wiki-sync.yml
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-stack-tauri-vue-typescript.md  0003-local-storage-sqlite.md  0004-sync-polling-with-etag.md  0005-pat-auth-and-keychain-storage.md  0006-graphql-first-rest-fallback.md  0007-status-timeline-from-timeline-events-api.md  0008-wiki-auto-deploy.md  0009-pull-request-discovery-via-search-api.md  0010-conversation-depth-storage.md  0011-cancel-inline-pr-detail-surface.md  0012-threads-bar-four-state-and-outdated-counted.md  0013-user-avatars-cache.md  0014-comment-markdown-rendering.md  0015-triage-state-model.md  0016-unified-multi-account-dashboard.md  0017-desktop-notifications.md  0018-archive-and-ttl.md  0019-error-handling-and-reauth-flow.md  0020-settings-persistence-boundary.md  0021-rust-to-typescript-type-bindings.md  0022-versioning-and-build-metadata.md  0023-release-pipeline.md  0024-auto-update-mechanism.md  0025-in-app-changelog.md  0026-tracing-adoption.md  0027-timeline-event-expansion.md  0028-persistent-notifications-inbox.md  0029-sync-owns-conversation-persistence.md  0030-ci-checks-json-column.md  0031-conversation-unit-attention-and-rearm-dispatch.md  0032-prune-pre-0031-notification-remnants.md  0033-single-attention-dot-and-action-scoped-clearing.md  README.md
docs/contracts/: conversation-depth.md  dashboard-data.md  github-client.md  sync-observability.md  triage-ux.md
docs/design/: README.md  app.css  chat-2026-05-19-design-system.md  tokens.css
docs/design/artboards/: branding.html  dashboard-expanded.html  dashboard-light.html  dashboard.html  design-system.html  onboarding.html  settings.html  states.html
docs/wiki/: Architecture.md  Conventions.md  FAQ.md  Getting-Started.md  Home.md  Platform-QA.md  Releasing.md  Roadmap.md
scripts/: bump-version.ts  stamp-changelog.ts
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_dashboard_fields.sql  0003_accounts_expires_at.sql  0004_conversation_depth.sql  0005_threads_breakdown.sql  0006_users_table.sql  0007_review_thread_url.sql  0008_comment_urls.sql  0009_comment_body_html.sql  0010_triage_state.sql  0011_review_url.sql  0012_archive_and_settings.sql  0013_rename_team_tracked.sql  0014_diff_hunk.sql  0015_index_review_comments_author_login.sql  0016_rename_pull_requests_draft.sql  0017_rename_relation_last_seen_at.sql  0018_last_seen_version.sql  0019_auto_update_settings.sql  0020_auto_archive_days.sql  0021_notifications.sql  0022_notifications_read_at.sql  0023_notification_retention.sql  0024_drop_review_thread_head_denorm.sql  0025_conversation_unit_read_state.sql  0026_role_obligation_dispatch.sql  0027_drop_dead_notification_columns.sql  0028_reviews_unit_and_obligation_onset.sql
src-tauri/src/: app_metadata.rs  lib.rs  main.rs  startup.rs
src-tauri/src/auth/: commands.rs  keychain.rs  mod.rs  store.rs  token_source.rs  validation.rs
src-tauri/src/conversation/: commands.rs  mod.rs  query.rs  types.rs  writer.rs
src-tauri/src/dashboard/: commands.rs  mod.rs  query.rs  types.rs
src-tauri/src/db/: etag_store.rs  migrate.rs  mod.rs
src-tauri/src/github/: auth.rs  client.rs  error.rs  etag.rs  mod.rs  rate_limit.rs
src-tauri/src/github/graphql/: client.rs  mod.rs  queries.rs
src-tauri/src/github/rest/: mod.rs  repos.rs  timeline.rs
src-tauri/src/notifications/: commands.rs  mod.rs  store.rs  types.rs
src-tauri/src/notify/: badge.rs  formatter.rs  mod.rs  pending.rs  runtime.rs  sink.rs  types.rs
src-tauri/src/repos/: commands.rs  mod.rs  store.rs  types.rs
src-tauri/src/settings/: commands.rs  mod.rs  types.rs
src-tauri/src/sync/: activity.rs  commands.rs  discovery.rs  events.rs  mod.rs  scheduler.rs  state.rs  status_timeline.rs  worker.rs
src-tauri/src/sync/worker/: dispatch.rs  mod.rs
src-tauri/src/sync/worker/cycle/: activity.rs  mod.rs  repos.rs  sweeps.rs  tests.rs
src-tauri/src/sync/worker/enrichment/: mod.rs  reviews.rs  timeline.rs  users.rs
src-tauri/src/sync/worker/enrichment/tests/: conversation.rs  mod.rs  timeline.rs  users.rs
src-tauri/src/sync/worker/triage_recompute/: mentions.rs  mod.rs  rearm.rs  tests.rs
src-tauri/src/triage/: commands.rs  mod.rs  query.rs  types.rs  units.rs
src-tauri/src/update/: commands.rs  mod.rs  state.rs  worker.rs
src-tauri/tests/: conversation_hydrator.rs  conversation_query.rs  dashboard_query.rs  github_client.rs  repos_rest.rs  sync_worker.rs
src-tauri/tests/fixtures/: discovery_empty.json  discovery_one_authored.json  graphql_errors.json  pr_comments.json  pr_detail.json  pr_timeline_page1.json  pr_timeline_page2.json  timeline_full_lifecycle.json
src/components/: AppShell.vue  PullRequestExternalLinks.vue  SidebarNav.vue  StatusBar.vue  WhatsNewDialog.vue
src/composables/: useAppMetadata.ts  useAutoUpdate.ts  useDeepLinkRouter.ts  useKeyboardShortcuts.ts  useNotificationRouter.ts  useNowSeconds.ts  usePlatformModifier.ts  useTauriListener.ts  useThreadDeepLink.ts
src/lib/: changelog.ts  deepLinks.ts  format.ts
src/router/: index.ts
src/stores/: accounts.ts  appearance.ts  conversation.ts  dashboard.ts  notifications.ts  repos.ts  settings.ts  sync.ts  syncActivity.ts  theme.ts  toast.ts  whatsNew.ts
src/types/: conversation.ts  dashboard.ts
src/views/: DashboardView.vue  HowSignalsWorkView.vue  NotificationsView.vue  OnboardingView.vue  PullRequestDetailView.vue  SettingsView.vue
(+59 files in other folders)
