[package]
name = "prism"
version = "0.1.0"
description = "Cross-platform desktop dashboard for managing GitHub pull requests."
authors = ["PRism contributors"]
license = "MIT"
repository = "https://github.com/cerinoligutom/PRism"
edition = "2021"
rust-version = "1.77"

[lib]
name = "prism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
time = { version = "0.3", default-features = false, features = ["formatting", "macros"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "rustls", "webpki-roots", "http2", "charset"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", default-features = false }
thiserror = "2"
secrecy = "0.10"
bytes = "1"
url = "2"
http = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["serde", "serde-well-known", "macros"] }
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2"
keyring = { version = "3.6", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
# Native error dialog shown when Tauri setup or `run()` fails. We use `rfd`
# rather than `tauri-plugin-dialog` because the plugin requires the Tauri
# runtime to be live, which is exactly what we cannot assume on a startup
# error. Default features (`xdg-portal`, `async-std`) are disabled - the
# portal backend has no message-dialog API and we only need the synchronous
# `MessageDialog::show()`. GTK3 is already a transitive Tauri 2 dep on Linux.
rfd = { version = "0.17", default-features = false, features = ["gtk3"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "test-util"] }
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
